tests/neg/i12348.scala
object A {
  given inline x: Int = 0 // error // error
